# scientific-software

./: README.md  pyproject.toml
.github/workflows/: build-and-test.yml
src/ees_scientific_software_engineering/: simple_function.py
tests/: test_simple_function.py  test_simple_function_with_data.py
tests/data/: test_multiply.json
