[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ees-scientific-software-engineering"
authors = [
  {name = "Tony Xiang",email = "y.xiang@tue.nl"},
  {name = "Peter Salemink", email = "p.j.salemink@tue.nl"}
]
description = "Training project for scientific software engineering"
readme = "README.md"
license = {text = "BSD License (BSD)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
requires-python = ">=3.12"
# add dependencies of your core package, check the license first!
dependencies = []
version = "0.1"

[project.optional-dependencies]

# dependencies for development
dev = [
  'pytest',
  'black',
  'isort',
  'pylint',
  'pytest-cov',
  'mypy'
]

[tool.setuptools.packages.find]
where = ["src"] 
namespaces = false 

[tool.setuptools.package-data]
"ees_scientific_software_engineering" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--cov=ees_scientific_software_engineering", "--cov-report", "term", "--cov-report", "html:python_cov_html", "--cov-fail-under=100"]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.isort]
profile = "black"
combine_as_imports = true
line_length = 120

[tool.pylint.main]
# Specify a score threshold under which the program will exit with error.
fail-under = 10
max-line-length = 120
# remove this line when you are asked by the assignment
disable = "missing-module-docstring,missing-function-docstring"

# Minimum Python version to use for version dependent checks. Will default to the
# version used to run pylint.
py-version = "3.12"

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
show_column_numbers = true
